# sbe

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: decoder.rs  encoder.rs  types.rs
tests/: basics.rs
