[package]
name = "radar"
version = "0.0.1"
authors = ["cryptopatrick <cryptopatrick@gmail.com>"]
edition = "2018"
description = "Rust library for working with radar data formats."
documentation = "https://docs.rs/sbe"
homepage = "https://github.com/cryptopatrick/radar"
repository = "https://github.com/cryptopatrick/radar"
readme = "README.md"
keywords = ["radar", "encoding", "decoding"]
license = "Unlicense/MIT"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
