[package]
name = "sbe"
version = "0.0.1"
authors = ["cryptopatrick <cryptopatrick@gmail.com>"]
edition = "2018"
description = "Rust library for working with Simple Binary Encoding data."
documentation = "https://docs.rs/sbe"
homepage = "https://github.com/cryptopatrick/sbe"
repository = "https://github.com/cryptopatrick/sbe"
readme = "README.md"
keywords = ["sbe", "encoding", "decoding"]
license = "Unlicense/MIT"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
